--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.6.0",
+    "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.2.15",
+    "prisma": "^3.6.0",
+    "tailwindcss": "^3.0.5"
   }
 }
