--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^3.6.0",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^3.5.0",
     "axios": "^0.24.0",
+    "babel-plugin-superjson-next": "^0.4.2",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "next": "12.0.7",
+    "currency-converter-lt": "^1.1.4",
+    "next": "12.0.3",
+    "next-auth": "^3.29.0",
+    "prisma": "^3.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-loader-spinner": "^4.0.0",
+    "superjson": "^1.8.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.2.15",
-    "prisma": "^3.6.0",
     "tailwindcss": "^3.0.5"
   }
 }
