--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
-    "superjson": "^1.8.0",
-    "validator": "^13.7.0"
+    "superjson": "^1.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "eslint": "8.4.1",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.2.15",
     "tailwindcss": "^3.0.5"
